[package]
name = "haneul-graphql"
version = "0.3.0"
authors = ["Joey Pham <joey.pham@haneul-labs.com>"]
repository = "https://github.com/GeunhwaJeong/haneul-rust-sdk/"
license = "Apache-2.0"
edition = "2024"
description = "GraphQL client for Haneul blockchain"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg=doc_cfg",
    "-Zunstable-options",
    "--generate-link-to-definition"
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
url = "2"
haneul-sdk-types = { version = "0.3.0", path = "../haneul-sdk-types", features = ["serde"] }
haneul-graphql-macros = { version = "=0.3.0", path = "../haneul-graphql-macros" }
haneul-rpc = { version = "0.3.0", path = "../haneul-rpc" }
base64ct = { version = "1.8.0", features = ["alloc"] }
bcs = "0.1.6"
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.40", features = ["full"] }
wiremock = "0.6"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(doc_cfg)'] }
