[package]
name = "haneul-transaction-builder"
version = "0.1.0"
authors = ["Stefan Stanciulescu <stefan@mystenlabs.com>", "Brandon Williams <brandon@mystenlabs.com>"]
license = "Apache-2.0"
edition = "2024"
description = "Transaction API for the Rust SDK for the Sui Blockchain"

[dependencies]
base64ct = { version = "1.8", features = ["std"] }
bcs = "0.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.15", default-features = false, features = ["alloc"] }
haneul-types = { package = "haneul-sdk-types", version = "0.1.0", path = "../haneul-sdk-types", features = ["serde", "hash"] }
thiserror = "2.0"
serde_json = { version = "1.0.145" }

# [dev-dependencies]
# anyhow = "1.0"
# rand = "0.8"
# serde_json = "1.0"
# haneul-crypto = { package = "haneul-crypto", path = "../haneul-crypto" , features = ["ed25519"] }
# haneul-graphql-client = { package = "haneul-graphql-client", path = "../haneul-graphql-client" }
# haneul-types = { package = "haneul-sdk-types", path = "../haneul-sdk-types", features = ["rand"] }
# tokio = { version = "1.0", features = ["full"] }
